<resources>
    <string name="app_name">Lat Long Finder</string>
    <string name="location_label">LOCATION IS:</string>
    <string name="location_button">GET MY LOCATION</string>
    <string name="loc_update_button">START LOCATION UPDATES</string>
    <string name="stop_loc_update_button">STOP LOCATION UPDATES</string>
    <string name="error_title">Oops, sorry!</string>
    <string name="error_message">There was an error. Please try again</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_not_available_message">Network is not available</string>
    <string name="sunrise_label">SUNRISE:</string>
    <string name="sunset_label">SUNSET:</string>
    <string name="day_length_label">DAYLIGHT:</string>
    <string name="action_settings">Settings</string>
    <string name="day_button">GET SUNRISE/SET/DAY LENGTH</string>
    <string name="content_desc_image">Map marker image</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="map_button">SEE LOCATION ON MAP</string>
    <string name="hello_world">Hello world!</string>
    <string name="conditions_label">CURRENTLY:</string>
    <string name="temperature_label">TEMP:</string>
    <string name="no_location_message">"(Couldn't get the location. Make sure location is enabled on the device)"</string>
    <string name="elevation_label">ELEVATION:</string>
</resources>
