<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/view_bg"
              android:gravity="center_horizontal"
              android:orientation="vertical">

    <ImageView
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/marker"
        android:contentDescription="@string/content_desc_image"
        android:id="@+id/markerImage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/location_label"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        android:id="@+id/locationLabel"/>

    <TextView
        android:id="@+id/locationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunrise_label"
            android:id="@+id/sunriseLabel"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunset_label"
            android:id="@+id/sunsetLabel"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day_length_label"
            android:id="@+id/dayLengthLabel"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sunriseTextView"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_weight="1"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sunsetTextView"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/dayLengthTextView"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conditions_label"
            android:id="@+id/conditionsLabel"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/temp_label"
            android:id="@+id/temperatureLabel"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/summaryTextView"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tempTextView"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/locationButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@color/btn_bg"
        android:text="@string/location_button"
        android:textColor="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/locUpdatesButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@color/btn_bg"
        android:text="@string/loc_update_button"
        android:textColor="@color/white"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/map_button"
        android:id="@+id/mapButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@color/btn_bg"
        android:textColor="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/>

</LinearLayout>